# awesome-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PLAN.md  README.md  compile_commands.json  main.cpp  package-lock.json
.claude/: settings.json  settings.local.json
.claude/skills/cpp-mentor/: SKILL.md
.claude/skills/cpp-unit-tests/: SKILL.md
.claude/skills/cpp-unit-tests/references/: examples.md
.claude/skills/review-cpp/: MEMORY.md  MODERN_CPP.md  OOP.md  PERFORMANCE.md  PROJECT_PATTERNS.md  READABILITY.md  SECURITY.md  SKILL.md
assets/models/block/: block.glb
assets/models/floor/: floor.glb
assets/models/office/: desk.fbx
assets/shaders/: batch_rendering.frag.glsl  batch_rendering.vert.glsl  border.frag  cube.frag.glsl  cube.vert.glsl  fog.frag  gizmo_normal.geo  gizmo_normal.vert  gizmo_world_coordinate.frag.glsl  gizmo_world_coordinate.geo.glsl  gizmo_world_coordinate.vert.glsl  grid_gizmo.frag.glsl  grid_gizmo.vert.glsl  lighting.frag  material.frag  postprocess_blur.frag  postprocess_invert copy.frag  simple.frag  simple.vert  simple_model.frag  simple_model.vert  skybox.frag  skybox.vert  surface.frag  text.frag  text.vert  ui_button.frag.glsl  ui_button.vert.glsl
editor/: CMakeLists.txt  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
engine/: CMakeLists.txt
engine/core/: Application.cpp  Application.h  Config.h  FrameBuffer.cpp  FrameBuffer.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Layer.h  LayerStack.cpp  LayerStack.h  TextureLoader.h  Window.cpp  Window.h
engine/debug/: FpsCounter.h
engine/meshes/: Cube.cpp  Cube.h  Mesh.cpp  Model.cpp  Model.h
engine/rendering/: PostProcessBlurEffectStrategy.cpp  PostProcessBlurEffectStrategy.h  PostProcessEdgeEffectStrategy.cpp  PostProcessEdgeEffectStrategy.h  PostProcessInvertEffectStrategy.cpp  RenderContext.h  Skybox.cpp
engine/scene/: CameraController.cpp  GridGizmo.cpp  GridGizmo.h  RenderComponent.h  Scene.cpp  Scene.h  TransformComponent.h  WorldSpaceGizmo.cpp  WorldSpaceGizmo.h
engine/ui/: ButtonElement.h  DebugPanel.cpp  UIElement.h  UIManager.cpp  UIManager.h
engine/voxel/: Chunk.h  ChunkMesher.h  GreedyMesher.cpp  GreedyMesher.h  TerrainGenerator.h  VoxelChunk.cpp
engine/world/: Coords.h  Reconcile.h  World.h
game/: CMakeLists.txt  GameApp.cpp  GameLayer.cpp  GameLayer.h
logs/agents/2026-03-10/architect/: event-system-design.md
src/: main.cpp
src/camera/: Camera.h
src/cameras/: Camera.cpp  Camera.h
src/core/: Application.cpp  Application.h  Assert.h  Config.h  Drawable.h  EntryPoint.h  EventBus.h  Input.cpp  Input.h  InputEvents.h  InputListener.h  TextureLoader.cpp  TextureLoader.h  Timestep.h  Window.cpp  Window.h
src/game/: GameApp.cpp  GameLayer.cpp
src/meshes/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/rendering/: PostProcessBlurEffectStrategy.cpp  PostProcessEffectStrategy.h  PostProcessInvertEffectStrategy.h  PostProcessing.cpp  PostProcessing.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h
src/scene/: CameraController.cpp  CameraController.h  Component.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Gizmo.h  RenderComponent.cpp  Scene.cpp  Scene.h  Transform.h
src/shader/: Shader.cpp  Shader.h
src/shaders/: Shader.cpp  Shader.h
src/shapes/: Cube.cpp  Cube.h  Shape.h
src/ui/: ButtonElement.cpp  ButtonElement.h  Clickable.h  DebugPanel.h  TextElement.cpp  TextElement.h  UIElement.h  UIManager.cpp  UIManager.h
src/voxel/: Block.h  Chunk.cpp  Chunk.h  ChunkMesher.cpp  GreedyMesher.cpp  TerrainGenerator.cpp  TerrainGenerator.h  VoxelChunk.cpp  VoxelChunk.h
src/world/: Coords.h  Reconcile.h  World.cpp  World.h
tests/: BlockTests.cpp  ButtonElementTests.cpp  CMakeLists.txt  CameraControllerTests.cpp  CameraTests.cpp  ChunkMesherTests.cpp  ChunkTests.cpp  CoordsTests.cpp  DesiredSetTests.cpp  EventBusTests.cpp  FpsCounterTests.cpp  GameObjectTests.cpp  GreedyMesherTests.cpp  InputTests.cpp  LayerStackTests.cpp  ReconcileTests.cpp  RenderContextTests.cpp  SceneTests.cpp  TerrainGeneratorTests.cpp  TestHelpers.h  TextElementTests.cpp  TimestepTests.cpp  TransformComponentTests.cpp  UIElementTests.cpp  UIManagerTests.cpp
